--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
         name="crime_details_label">Details</string>
     <string
         name="crime_solved_label">Solved</string>
+    <string name="new_crime">New Crime</string>
+
 </resources>
